--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ sysinfo.txt
 *.apk
 *.unitypackage
 Assets/SLG/LightingData.asset
+Assets/Art/
+Assets/Art.meta
+Assets/Resources/Textures/
+Assets/Resources/Textures.meta
