--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,5 @@ sysinfo.txt
 *.apk
 *.unitypackage
 Assets/SLG/LightingData.asset
-Assets/Art/
-Assets/Art.meta
-Assets/Resources/Textures/
-Assets/Resources/Textures.meta
+Assets/_Private/
+Assets/_Private.meta
